master Add Docker version

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,8 @@
-NODE_ENV=development
-TOKEN=your token here
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_PORT=27017
+MONGO_DB=
+NODE_ENV=production
+TOKEN=
+PORT=443 | 8443
+HEROKU_URL=https://...
