--- a/package.json
+++ b/package.json
@@ -2,15 +2,25 @@
   "name": "heroku-node-telegram-bot",
   "version": "1.0.3",
   "description": "Starter pack for running telegram bot on the Heroku using Node.js",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node start.js",
+    "build": "node_modules/.bin/babel lib -d dist",
+    "start": "npm run build && nodemon dist/start.js",
+    "serve": "node dist/start.js",
     "switch_to_dev": "export $(cat .env | xargs) && wget --spider https://api.telegram.org/bot$TOKEN/setWebhook?url= --delete-after && node index.js"
   },
   "author": "m1nd",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -18,14 +28,12 @@
     "body-parser": "^1.15.0",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
+    "mongoose": "^5.8.10",
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-transform-runtime": "^7.8.0",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/register": "^7.7.7",
-    "@babel/runtime": "^7.8.0"
+    "@babel/cli": "^7.8.3",
+    "nodemon": "^2.0.2"
   },
   "babel": {
     "presets": [
