--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/.bin/babel lib -d dist",
     "start": "npm run build && nodemon dist/start.js",
-    "serve": "node dist/start.js",
+    "serve": "node lib/start.js",
     "switch_to_dev": "export $(cat .env | xargs) && wget --spider https://api.telegram.org/bot$TOKEN/setWebhook?url= --delete-after && node index.js"
   },
   "author": "m1nd",
