--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "heroku-node-telegram-bot",
+  "name": "telegram-bot",
   "version": "1.0.3",
-  "description": "Starter pack for running telegram bot on the Heroku using Node.js",
-  "main": "start.js",
+  "description": "Starter pack for running telegram bot on the DO using Node.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/.bin/babel lib -d dist",
-    "start": "npm run build && nodemon dist/start.js",
-    "serve": "node lib/start.js",
+    "start": "npm run build && nodemon dist/index.js",
+    "build": "./node_modules/typescript/bin/tsc -p tsconfig.json",
+    "dev": "./node_modules/typescript/bin/tsc -p tsconfig.json --watch",
+    "lint": "tslint -p tsconfig.json",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "switch_to_dev": "export $(cat .env | xargs) && wget --spider https://api.telegram.org/bot$TOKEN/setWebhook?url= --delete-after && node index.js"
   },
   "author": "m1nd",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/register": "^7.8.3",
-    "@babel/runtime": "^7.8.3",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.15.0",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
@@ -32,25 +22,12 @@
     "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "nodemon": "^2.0.2"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "useBuiltIns": false
-        }
-      ]
-    ],
-    "plugins": [
-      [
-        "@babel/plugin-transform-runtime",
-        {
-          "regenerator": true
-        }
-      ]
-    ]
+    "@types/express": "^4.17.2",
+    "@types/node": "^13.5.1",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.5"
   }
 }
