--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && nodemon dist/index.js",
+    "start": "nodemon dist/index.js",
     "build": "./node_modules/typescript/bin/tsc -p tsconfig.json",
     "dev": "./node_modules/typescript/bin/tsc -p tsconfig.json --watch",
     "lint": "tslint -p tsconfig.json",
