--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     networks:
       - app-network
     command: >
-      sh -c "./wait-for.sh db:27017 && npm start" 
+      sh -c "./wait-for.sh db:27017 && npm start && pwd" 
 
   db:
     image: mongo:4.1.8-xenial
